<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">RejseBuddy</string>

    <string name="trip_title">Rejse</string>
    <string name="trips_title">Rejser</string>
    <string name="contacts_title">Kontakter</string>
    <string name="settings_title">Indstillinger</string>
    <string name="connections_title">Forbindelser</string>
    <string name="create_contacts_title">Opret Kontakt</string>

    <string name="save_contact">Gem Kontakt</string>
    <string name="delete_contact">Slet Kontakt</string>

    <string name="to">Til</string>
    <string name="from">Fra</string>
    <string name="change">Skift</string>
    <string name="location">Lokation</string>
    <string name="my_location">Min Lokation</string>
    <string name="start_trip">Start Rejse</string>

    <string name="name">Navn</string>
    <string name="missing">Mangler</string>
    <string name="missing_name">Mangler Navn</string>
    <string name="address">Adresse</string>
    <string name="missing_address">Mangler Adresse</string>

    <string name="amount_changes">%1$d Skift</string>
    <string name="amount_duration">%1$s Varighed</string>

    <string name="settings_data">Data</string>
    <string name="settings_delete_data">Slet applikations data</string>
    <string name="settings_deleting_data">Sletter applikations data…</string>
    <string name="settings_delete_data_dec">Dette kan ikke fortrydes!</string>
    <string name="settings_import_data">Importer eksempeldata</string>
    <string name="settings_importing_data">Importerer eksempeldata…</string>
    <string name="settings_import_data_dec">Dette inkluderer: kontakter, og tidligere rejser.</string>

    <string name="channel_name">Rejseopdateringer</string>
    <string name="channel_description">Alarmering ved skift på rejse.</string>
</resources>
