<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.contacts.ContactsEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/list_padding">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_padding"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:layout_marginBottom="@dimen/list_padding" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <fragment
            android:id="@+id/address"
            android:name="com.rejsebuddy.views.address.AddressInputFragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_padding"
            android:layout_marginBottom="@dimen/list_padding" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/save_contact" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/delete_contact"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>