<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_padding"
        android:background="@android:color/background_light" >

        <TextView
            android:id="@+id/fromText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/from"
                android:name="com.rejsebuddy.views.address.AddressInputFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/list_padding" />

            <ImageButton
                android:id="@+id/request_location"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/location"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:src="@drawable/ic_my_location_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/toText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <fragment
            android:id="@+id/to"
            android:name="com.rejsebuddy.views.address.AddressInputFragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding" />

        <Button
            android:id="@+id/travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/start_trip" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/trips_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trips_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</LinearLayout>